# domlink

./: Cargo.toml  doc.md  readme.md
benches/: benchmark.rs
src/: dom.rs  escape.rs  io_adapter.rs  lib.rs  link.rs  tags.rs  tpl.rs
src/examples/: alpine.rs  basic.rs  compact.rs  components.rs  htmx.rs  io_writer.rs  raw_html.rs  safe_html.rs  svg.rs  table.rs  template.rs  template_raw.rs  xss.rs
tests/: integration.rs
