[package]
name = "domlink"
version = "0.1.0"
edition = "2024"
description = "Fast and safe runtime HTML rendering for Rust"
license = "MIT"
repository = "https://github.com/mzigan/domlink"
readme = "readme.md"
keywords = ["html", "template", "ssr", "xss", "runtime"]
categories = ["template-engine", "web-programming"]

[dependencies]

[lib]
name = "domlink"
path = "src/lib.rs"
crate-type = ["lib"]

[dev-dependencies]
criterion = "0.5"
askama = "0.12"
maud = "0.26"

[[bench]]
name = "benchmark"
harness = false
